--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <string name="the_product">Product</string>
+    <string name="quantity">Quantity</string>
+
     <string name="surety">Are you sure?</string>
 
     <string name="b_discount_first">First Order Disc.</string>
@@ -357,9 +360,6 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="followed">Followed</string>
-
-
-
 
     <string name="Coupons">Coupons</string>
     <string name="VIP">Special Members</string>
