--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -63,8 +63,8 @@
 
     <string name="term_and_conditions">Terms and Conditions</string>
     <string name="privacy">Privacy Policy</string>
-    <string name="return_p">Return Policy</string>
-    <string name="help_centre">Help Centre</string>
+    <string name="return_p">Return and Exchange Policy</string>
+    <string name="help_centre">Help Center</string>
 
 
     <string name="expire">Expired</string>
